# spotideets

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/accounts/: apps.py  backends.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_auto_20231005_0301.py  0002_friendship_privacysettings.py  0003_auto_20230928_1016.py  0004_alter_customuser_username.py
apps/spotify/: apps.py  decorators.py  middlewares.py  models.py  permissions.py  serializers.py  urls.py  util.py  views.py
apps/spotify/migrations/: 0001_initial.py  0002_auto_20230917_1749.py  0002_auto_20230921_1655.py  0003_auto_20230921_1753.py  0003_spotifytoken_expires_at.py  0004_artist_popularity.py  0004_spotifytoken_update_at.py  0005_artist_genres.py  0006_rename_spotify_id_artist_artist_id.py
apps/spotify/templates/: oauth-home.html  oauth-success.html  top_tracks.html
apps/spotify/tests/: test_models.py
apps/spotify/views/: artists.py  auth.py  base.py  tracks.py
apps/spotify/views/tracks/: recent.py  top.py
commons/: enums.py  models.py
spotideets/: asgi.py  settings.py  urls.py  wsgi.py
