[tool.poetry]
name = "spotideets"
version = "0.1.0"
description = "Detailed statistics about spotify listening habits, such as top tracks, genres and artists over various time periods"
authors = ["Temiloluwa Samuel <65780579+stemitom@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.10"
djangorestframework = "3.13.1"
drf-yasg = {extras = ["validation"], version = "^1.21.7"}
django-environ = "^0.11.2"
redis = "^5.0.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
spotipy = "^2.23.0"
jupyter = "^1.0.0"
requests = "^2.31.0"
python-decouple = "^3.8"
django-enumfields = "^2.1.1"
pre-commit = "^3.4.0"
factory-boy = "^3.3.0"
drf-writable-nested = "^0.7.0"
django-debug-toolbar = "^4.2.0"

[tool.poetry.dev-dependencies]
ruff = "^0.0.282"
mypy = "^1.4.1"
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"
django-stubs = "^4.2.3"
djangorestframework-stubs = "^3.14.2"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
pytest-cov = "^4.1.0"
ipdb = "^0.13.13"
pytest-deadfixtures = "^2.2.1"
pytest-sugar = "^0.9.7"
pylint-django = "^2.5.3"
pyinstrument = "^4.5.1"
ipython = "^8.14.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pylint = "^2.17.1"
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
exclude = '''
  /(
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''

[tool.ruff]
line-length = 120
exclude = ["migrations", ".venv"]
ignore = ["TRY003", "G004", "TRY301"]

[tool.ruff.per-file-ignores]
"**/test_**.py" = ["S101"]
"spotideets/settings.py" = ["E402"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.pylint]
max-args = 6

[tool.isort]
profile = "black"
line_length = 119
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
known_django = "django"
combine_as_imports = true
lines_between_sections = 1
include_trailing_comma = true
known_first_party = "spotideets"
known_rest_framework = "rest_framework"
skip_glob = ["**/.venv/*", "**/migrations/*"]
sections = ["FUTURE","STDLIB","THIRDPARTY","DJANGO", "REST_FRAMEWORK", "FIRSTPARTY","LOCALFOLDER"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "spotideets.settings"
